HHH-18992 - a few changes/additions to the MultiLoadLockingTest - added an @AfterEach tearDown method - added tests also for findMultiple and byMultipleNaturalId - corrected the tests that use optimistic/optimistic_force_increment   (they should use a versioned entity) - add statement inspection where applicable
Signed-off-by: Jan Schatteman <jschatte@redhat.com>