@@ -4,25 +4,36 @@
  */
 package org.hibernate.orm.test.loading.multiLoad;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.io.Serializable;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 
+import jakarta.persistence.Embeddable;
+import jakarta.persistence.EmbeddedId;
+import jakarta.persistence.Version;
 import org.hibernate.LockMode;
 import org.hibernate.LockOptions;
+import org.hibernate.annotations.Cache;
+import org.hibernate.annotations.CacheConcurrencyStrategy;
+import org.hibernate.annotations.NaturalId;
 import org.hibernate.cfg.AvailableSettings;
-import org.hibernate.orm.test.cache.Company;
-import org.hibernate.orm.test.cache.User;
-import org.hibernate.testing.orm.domain.gambit.EntityWithAggregateId;
+import org.hibernate.dialect.Dialect;
+import org.hibernate.dialect.PostgreSQLDialect;
+import org.hibernate.dialect.PostgreSQLSqlAstTranslator;
+import org.hibernate.engine.spi.SessionFactoryImplementor;
+import org.hibernate.sql.ast.tree.Statement;
+import org.hibernate.testing.jdbc.SQLStatementInspector;
 import org.hibernate.testing.orm.junit.DomainModel;
 import org.hibernate.testing.orm.junit.JiraKey;
 import org.hibernate.testing.orm.junit.ServiceRegistry;
 import org.hibernate.testing.orm.junit.SessionFactory;
 import org.hibernate.testing.orm.junit.SessionFactoryScope;
 import org.hibernate.testing.orm.junit.Setting;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -34,12 +45,11 @@ import jakarta.persistence.Id;
 @DomainModel(
 		annotatedClasses = {
 			MultiLoadLockingTest.Customer.class,
-			EntityWithAggregateId.class,
-			User.class,
-			Company.class
+			MultiLoadLockingTest.EntityWithAggregateId.class,
+			MultiLoadLockingTest.User.class
 		}
 	)
-@SessionFactory
+@SessionFactory(useCollectingStatementInspector = true)
 @ServiceRegistry(
 		settings = {
 				@Setting(name = AvailableSettings.USE_QUERY_CACHE, value = "true"),
@@ -49,7 +59,9 @@ import jakarta.persistence.Id;
 @JiraKey(value = "HHH-18992")
 public class MultiLoadLockingTest {
 
-	private List<Customer> customerList = List.of(
+	private SQLStatementInspector sqlStatementInspector;
+
+	private final List<Customer> customerList = List.of(
 			new Customer(1L, "Customer A"),
 			new Customer(2L, "Customer B"),
 			new Customer(3L, "Customer C"),
@@ -57,12 +69,22 @@ public class MultiLoadLockingTest {
 			new Customer(5L, "Customer E")
 		);
 
-	private List<Long> customerIds = customerList
+	private final List<Long> customerIdsAsLongs = customerList
 		.stream()
-		.map(Customer::getId)
-		.collect(Collectors.toList());
+		.map( Customer::getId )
+		.toList();
 
-	private List<EntityWithAggregateId> entityWithAggregateIdList = List.of(
+	private final List<Object> customerIdsAsObjects = customerList
+			.stream()
+			.map( (Function<Customer, Object>) Customer::getId )
+			.toList();
+
+	private final List<Object> customerNaturalIdsAsObjects = customerList
+			.stream()
+			.map( (Function<Customer, Object>) Customer::getName )
+			.toList();
+
+	private final List<EntityWithAggregateId> entityWithAggregateIdList = List.of(
 			new EntityWithAggregateId( new EntityWithAggregateId.Key( "1", "1" ), "Entity A" ),
 			new EntityWithAggregateId( new EntityWithAggregateId.Key( "2", "2" ), "Entity B" ),
 			new EntityWithAggregateId( new EntityWithAggregateId.Key( "3", "3" ), "Entity C" ),
@@ -70,141 +92,301 @@ public class MultiLoadLockingTest {
 			new EntityWithAggregateId( new EntityWithAggregateId.Key( "5", "5" ), "Entity E" )
 	);
 
-	private List<EntityWithAggregateId.Key> entityWithAggregateIdKeys = entityWithAggregateIdList
+	private final List<EntityWithAggregateId.Key> entityWithAggregateIdKeys = entityWithAggregateIdList
 		.stream()
 		.map(EntityWithAggregateId::getKey)
-		.collect(Collectors.toList());
+		.toList();
 
-	public List<User> userList = List.of(
-			new User(1, null),
-			new User(2, null),
-			new User(3, null),
-			new User(4, null),
-			new User(5, null)
+	private final List<Object> entityWithAggregateIdKeysAsObjects = entityWithAggregateIdList
+			.stream()
+			.map( (Function<EntityWithAggregateId, Object>) EntityWithAggregateId::getKey )
+			.toList();
+
+	private final List<Object> entityWithAggregateIdNaturalIdsAsObjects = entityWithAggregateIdList
+			.stream()
+			.map( (Function<EntityWithAggregateId, Object>) EntityWithAggregateId::getData )
+			.toList();
+
+	public final List<User> userList = List.of(
+			new User(1, "User 1"),
+			new User(2, "User 2"),
+			new User(3, "User 3"),
+			new User(4, "User 4"),
+			new User(5, "User 5")
 	);
 
-	private List<Integer> userIds = userList
+	private final List<Integer> userIds = userList
 		.stream()
 		.map(User::getId)
-		.collect(Collectors.toList());
+		.toList();
+
+	private final List<Object> userIdsAsObjects = userList
+			.stream()
+			.map( (Function<User, Object>) User::getId )
+			.toList();
+
+	private final List<Object> userNaturalIdsAsObjects = userList
+			.stream()
+			.map( (Function<User, Object>) User::getName )
+			.toList();
 
 
 	@BeforeEach
 	public void prepareTestDataAndClearL2C(SessionFactoryScope scope) {
+		sqlStatementInspector = scope.getCollectingStatementInspector();
+
 		scope.inTransaction(session -> {
 			customerList.forEach( session::persist );
 			entityWithAggregateIdList.forEach( session::persist );
 			userList.forEach( session::persist );
 		});
 		scope.getSessionFactory().getCache().evictAll();
+		sqlStatementInspector.clear();
 	}
 
-	// (1) simple Id entity w/ pessimistic read lock
+	@AfterEach
+	public void tearDown(SessionFactoryScope scope) {
+		scope.inTransaction( session -> scope.getSessionFactory().getSchemaManager().truncate() );
+		scope.getSessionFactory().getCache().evictAll();
+	}
 
+
+	// (1) simple Id entity w/ pessimistic read lock
 	@Test
 	void testMultiLoadSimpleIdEntityPessimisticReadLock(SessionFactoryScope scope) {
+		final LockOptions lockOptions = new LockOptions(LockMode.PESSIMISTIC_READ);
+		final String lockString = scope.getSessionFactory().getJdbcServices().getDialect().getForUpdateString(lockOptions);
+
+		// test byMultipleIds
 		scope.inTransaction( session -> {
 			List<Customer> customersLoaded = session.byMultipleIds(Customer.class)
-				.with(new LockOptions(LockMode.PESSIMISTIC_READ))
-				.multiLoad(customerIds);
+					.with( lockOptions )
+					.multiLoad(customerIdsAsLongs);
 			assertNotNull(customersLoaded);
 			assertEquals(customerList.size(), customersLoaded.size());
-			customersLoaded.forEach(customer -> {
-				assertEquals(LockMode.PESSIMISTIC_READ, session.getCurrentLockMode(customer));
-			});
+			customersLoaded.forEach(customer -> assertEquals(LockMode.PESSIMISTIC_READ, session.getCurrentLockMode(customer)) );
+			checkStatement( lockString );
+		} );
+		// test findMultiple
+		scope.inTransaction( session -> {
+			List<Customer> customersLoaded = session.findMultiple(Customer.class, customerIdsAsObjects, LockMode.PESSIMISTIC_READ);
+			assertNotNull(customersLoaded);
+			assertEquals(customerList.size(), customersLoaded.size());
+			customersLoaded.forEach(customer -> assertEquals(LockMode.PESSIMISTIC_READ, session.getCurrentLockMode(customer)) );
+			checkStatement( lockString );
+		} );
+		// test byMultipleNaturalId
+		scope.inTransaction( session -> {
+			List<Customer> customersLoaded = session.byMultipleNaturalId(Customer.class)
+					.with( lockOptions )
+					.multiLoad( customerNaturalIdsAsObjects );
+			assertNotNull(customersLoaded);
+			assertEquals(customerList.size(), customersLoaded.size());
+			customersLoaded.forEach(customer -> assertEquals(LockMode.PESSIMISTIC_READ, session.getCurrentLockMode(customer)) );
+			checkStatement( lockString );
 		} );
 	}
 
 	// (2) composite Id entity w/ pessimistic read lock (one of the entities already in L1C)
-
 	@Test
-	void testMultiLoadCompositeIdEntityPessimisticReadLockAlreadyInSession(
-		SessionFactoryScope scope) {
+	void testMultiLoadCompositeIdEntityPessimisticReadLockAlreadyInSession(SessionFactoryScope scope) {
+		final LockOptions lockOptions = new LockOptions(LockMode.PESSIMISTIC_READ);
+		final String lockString = scope.getSessionFactory().getJdbcServices().getDialect().getForUpdateString(lockOptions);
+
 		scope.inTransaction( session -> {
 			EntityWithAggregateId entityInL1C = session
-				.find(EntityWithAggregateId.class, entityWithAggregateIdList.get(0).getKey());
+					.find(EntityWithAggregateId.class, entityWithAggregateIdList.get(0).getKey());
 			assertNotNull(entityInL1C);
+			sqlStatementInspector.clear();
+
+			// test byMultipleIds
 			List<EntityWithAggregateId> entitiesLoaded = session.byMultipleIds(EntityWithAggregateId.class)
-				.with(new LockOptions(LockMode.PESSIMISTIC_READ))
-				.enableSessionCheck(true)
-				.multiLoad(entityWithAggregateIdKeys);
+					.with( lockOptions )
+					.multiLoad(entityWithAggregateIdKeys);
 			assertNotNull(entitiesLoaded);
 			assertEquals(entityWithAggregateIdList.size(), entitiesLoaded.size());
-			entitiesLoaded.forEach(entity -> {
-				assertEquals(LockMode.PESSIMISTIC_READ, session.getCurrentLockMode(entity));
-			});
+			entitiesLoaded.forEach(entity -> assertEquals(LockMode.PESSIMISTIC_READ, session.getCurrentLockMode(entity)) );
+			checkStatement( lockString );
+		} );
+		// test findMultiple
+		scope.inTransaction( session -> {
+			EntityWithAggregateId entityInL1C = session
+					.find(EntityWithAggregateId.class, entityWithAggregateIdList.get(0).getKey());
+			assertNotNull(entityInL1C);
+			sqlStatementInspector.clear();
+
+			List<EntityWithAggregateId> entitiesLoaded = session.findMultiple(EntityWithAggregateId.class,
+							entityWithAggregateIdKeysAsObjects, LockMode.PESSIMISTIC_READ );
+			assertNotNull(entitiesLoaded);
+			assertEquals(entityWithAggregateIdList.size(), entitiesLoaded.size());
+			entitiesLoaded.forEach(entity -> assertEquals(LockMode.PESSIMISTIC_READ, session.getCurrentLockMode(entity)) );
+			checkStatement( lockString );
+		} );
+		// test byMultipleNaturalId
+		scope.inTransaction( session -> {
+			EntityWithAggregateId entityInL1C = session
+					.find(EntityWithAggregateId.class, entityWithAggregateIdList.get(0).getKey());
+			assertNotNull(entityInL1C);
+			sqlStatementInspector.clear();
+
+			List<EntityWithAggregateId> entitiesLoaded = session.byMultipleNaturalId(EntityWithAggregateId.class)
+					.with( lockOptions )
+					.multiLoad( entityWithAggregateIdNaturalIdsAsObjects );
+			assertNotNull(entitiesLoaded);
+			assertEquals(entityWithAggregateIdList.size(), entitiesLoaded.size());
+			entitiesLoaded.forEach(entity -> assertEquals(LockMode.PESSIMISTIC_READ, session.getCurrentLockMode(entity)) );
+			checkStatement( lockString );
 		} );
 	}
 
 	// (3) simple Id entity w/ pessimistic write lock (one in L1C & some in L2C)
-
 	@Test
-	public void testMultiLoadSimpleIdEntityPessimisticWriteLockSomeInL1CAndSomeInL2C(
-		SessionFactoryScope scope) {
-		Integer userInL2CId = userIds.get(0);
-		Integer userInL1CId = userIds.get(1);
+	public void testMultiLoadSimpleIdEntityPessimisticWriteLockSomeInL1CAndSomeInL2C(SessionFactoryScope scope) {
+		final Integer userInL2CId = userIds.get(0);
+		final Integer userInL1CId = userIds.get(1);
+		final LockOptions lockOptions = new LockOptions(LockMode.PESSIMISTIC_WRITE);
+		Dialect dialect = scope.getSessionFactory().getJdbcServices().getDialect();
+		String lockString;
+		if ( PostgreSQLDialect.class.isAssignableFrom( dialect.getClass() ) ) {
+			PgSqlAstTranslatorExt translator = new PgSqlAstTranslatorExt( scope.getSessionFactory(), null );
+			lockString = translator.getForUpdate();
+		}
+		else  {
+			lockString = scope.getSessionFactory().getJdbcServices().getDialect().getForUpdateString(lockOptions);
+		}
+
 		scope.inTransaction( session -> {
 			User userInL2C = session.find(User.class, userInL2CId);
 			assertNotNull(userInL2C);
 		} );
+		// test byMultipleIds
 		scope.inTransaction( session -> {
 			assertTrue(session.getFactory().getCache().containsEntity(User.class, userInL2CId));
 			User userInL1C = session.find(User.class, userInL1CId);
 			assertNotNull(userInL1C);
+			sqlStatementInspector.clear();
+
 			List<User> usersLoaded = session.byMultipleIds(User.class)
-				.with(new LockOptions(LockMode.PESSIMISTIC_WRITE))
-				.multiLoad(userIds);
+					.with( lockOptions )
+					.multiLoad(userIds);
 			assertNotNull(usersLoaded);
 			assertEquals(userList.size(), usersLoaded.size());
-			usersLoaded.forEach(user -> {
-				assertEquals(LockMode.PESSIMISTIC_WRITE, session.getCurrentLockMode(user));
-			});
+			usersLoaded.forEach(user -> assertEquals(LockMode.PESSIMISTIC_WRITE, session.getCurrentLockMode(user)) );
+			checkStatement( lockString );
+		} );
+		// test findMultiple
+		scope.inTransaction( session -> {
+			User userInL1C = session.find(User.class, userInL1CId);
+			assertNotNull(userInL1C);
+			sqlStatementInspector.clear();
+
+			List<User> usersLoaded = session.findMultiple(User.class, userIdsAsObjects, LockMode.PESSIMISTIC_WRITE);
+			assertNotNull(usersLoaded);
+			assertEquals(userList.size(), usersLoaded.size());
+			usersLoaded.forEach(user -> assertEquals(LockMode.PESSIMISTIC_WRITE, session.getCurrentLockMode(user)) );
+			checkStatement( lockString );
+		} );
+		// test byMultipleNaturalId
+		scope.inTransaction( session -> {
+			User userInL1C = session.find(User.class, userInL1CId);
+			assertNotNull(userInL1C);
+			sqlStatementInspector.clear();
+
+			List<User> usersLoaded = session.byMultipleNaturalId(User.class)
+					.with( lockOptions )
+					.multiLoad( userNaturalIdsAsObjects );
+			assertNotNull(usersLoaded);
+			assertEquals(userList.size(), usersLoaded.size());
+			usersLoaded.forEach(user -> assertEquals(LockMode.PESSIMISTIC_WRITE, session.getCurrentLockMode(user)) );
+			checkStatement( lockString );
 		} );
 	}
 
-
-
 	// (4) simple Id entity w/ optimistic read lock
-
 	@Test
 	void testMultiLoadSimpleIdEntityOptimisticReadLock(SessionFactoryScope scope) {
+		// test byMultipleIds
 		scope.inTransaction( session -> {
-			List<Customer> customersLoaded = session.byMultipleIds(Customer.class)
-				.with(new LockOptions(LockMode.OPTIMISTIC))
-				.multiLoad(customerIds);
-			assertNotNull(customersLoaded);
-			assertEquals(customerList.size(), customersLoaded.size());
-			customersLoaded.forEach(customer -> {
-				assertEquals(LockMode.OPTIMISTIC, session.getCurrentLockMode(customer));
-			});
+			List<User> usersLoaded = session.byMultipleIds(User.class)
+					.with(new LockOptions(LockMode.OPTIMISTIC))
+					.multiLoad(userIds);
+			assertNotNull(usersLoaded);
+			assertEquals(userList.size(), usersLoaded.size());
+			usersLoaded.forEach(user -> assertEquals(LockMode.OPTIMISTIC, session.getCurrentLockMode(user)) );
+		} );
+		// test findMultiple
+		scope.inTransaction( session -> {
+			List<User> usersLoaded = session.findMultiple(User.class, userIdsAsObjects, LockMode.OPTIMISTIC);
+			assertNotNull(usersLoaded);
+			assertEquals(userList.size(), usersLoaded.size());
+			usersLoaded.forEach(user -> assertEquals(LockMode.OPTIMISTIC, session.getCurrentLockMode(user)) );
+		} );
+		// test byMultipleNaturalId
+		scope.inTransaction( session -> {
+			List<User> usersLoaded = session.byMultipleNaturalId(User.class)
+					.with( new LockOptions(LockMode.OPTIMISTIC) )
+					.multiLoad( userNaturalIdsAsObjects );
+			assertNotNull(usersLoaded);
+			assertEquals(userList.size(), usersLoaded.size());
+			usersLoaded.forEach(user -> assertEquals(LockMode.OPTIMISTIC, session.getCurrentLockMode(user)) );
 		} );
 	}
 
 
 	// (5) simple Id entity w/ optimistic force increment lock
-
 	@Test
 	void testMultiLoadSimpleIdEntityOptimisticForceIncrementLock(SessionFactoryScope scope) {
+		// test byMultipleIds
 		scope.inTransaction( session -> {
-			List<Customer> customersLoaded = session.byMultipleIds(Customer.class)
-				.with(new LockOptions(LockMode.OPTIMISTIC_FORCE_INCREMENT))
-				.multiLoad(customerIds);
-			assertNotNull(customersLoaded);
-			assertEquals(customerList.size(), customersLoaded.size());
-			customersLoaded.forEach(customer -> {
-				assertEquals(LockMode.OPTIMISTIC_FORCE_INCREMENT, session.getCurrentLockMode(customer));
-			});
+			List<User> usersLoaded = session.byMultipleIds(User.class)
+					.with(new LockOptions(LockMode.OPTIMISTIC_FORCE_INCREMENT))
+					.multiLoad(userIds);
+			assertNotNull(usersLoaded);
+			assertEquals(userList.size(), usersLoaded.size());
+			usersLoaded.forEach(user -> assertEquals(LockMode.OPTIMISTIC_FORCE_INCREMENT, session.getCurrentLockMode(user)) );
+		} );
+		// test findMultiple
+		scope.inTransaction( session -> {
+			List<User> usersLoaded = session.findMultiple(User.class, userIdsAsObjects, LockMode.OPTIMISTIC_FORCE_INCREMENT);
+			assertNotNull(usersLoaded);
+			assertEquals(userList.size(), usersLoaded.size());
+			usersLoaded.forEach(user -> assertEquals(LockMode.OPTIMISTIC_FORCE_INCREMENT, session.getCurrentLockMode(user)) );
+		} );
+		// test byMultipleNaturalId
+		scope.inTransaction( session -> {
+			List<User> usersLoaded = session.byMultipleNaturalId(User.class)
+					.with( new LockOptions(LockMode.OPTIMISTIC_FORCE_INCREMENT) )
+					.multiLoad( userNaturalIdsAsObjects );
+			assertNotNull(usersLoaded);
+			assertEquals(userList.size(), usersLoaded.size());
+			usersLoaded.forEach(user -> assertEquals(LockMode.OPTIMISTIC_FORCE_INCREMENT, session.getCurrentLockMode(user)) );
 		} );
 	}
 
+	private void checkStatement(String lockString) {
+		assertEquals( 1,sqlStatementInspector.getSqlQueries().size() );
+		assertTrue( sqlStatementInspector.getSqlQueries().get( 0 ).contains( lockString ) );
+		sqlStatementInspector.clear();
+	}
 
+	// Ugly-ish hack to be able to access the PostgreSQLSqlAstTranslator.getForUpdate() method needed for testing the PostgreSQL dialects
+	private static class PgSqlAstTranslatorExt extends PostgreSQLSqlAstTranslator {
+		public PgSqlAstTranslatorExt(SessionFactoryImplementor sessionFactory, Statement statement) {
+			super( sessionFactory, statement );
+		}
 
-	@Entity
+		@Override
+		protected String getForUpdate() {
+			return super.getForUpdate();
+		}
+	}
+
+	@Entity(name = "Customer")
 	public static class Customer {
-
 		@Id
 		private Long id;
-		@Basic
+		@Basic(optional = false)
+		@NaturalId
 		private String name;
 
 		protected Customer() {
@@ -230,6 +412,118 @@ public class MultiLoadLockingTest {
 		public void setName(String name) {
 			this.name = name;
 		}
-
 	}
+
+	@Entity(name = "EntityWithAggregateId")
+	public static class EntityWithAggregateId {
+		@EmbeddedId
+		private EntityWithAggregateId.Key key;
+		@NaturalId
+		private String data;
+
+		public EntityWithAggregateId() {
+		}
+
+		public EntityWithAggregateId(EntityWithAggregateId.Key key, String data) {
+			this.key = key;
+			this.data = data;
+		}
+
+		public EntityWithAggregateId.Key getKey() {
+			return key;
+		}
+
+		public void setKey(EntityWithAggregateId.Key key) {
+			this.key = key;
+		}
+
+		public String getData() {
+			return data;
+		}
+
+		public void setData(String data) {
+			this.data = data;
+		}
+
+
+		@Embeddable
+		public static class Key implements Serializable {
+			private String value1;
+			private String value2;
+
+			public Key() {
+			}
+
+			public Key(String value1, String value2) {
+				this.value1 = value1;
+				this.value2 = value2;
+			}
+
+			public String getValue1() {
+				return value1;
+			}
+
+			public void setValue1(String value1) {
+				this.value1 = value1;
+			}
+
+			public String getValue2() {
+				return value2;
+			}
+
+			public void setValue2(String value2) {
+				this.value2 = value2;
+			}
+		}
+	}
+
+	@Entity(name = "MyUser")
+	@Cache(usage = CacheConcurrencyStrategy.READ_WRITE)
+	public static class User {
+		@Id
+		int id;
+
+		@Version
+		private int version;
+
+		@NaturalId
+		private String name;
+
+		public User() {
+		}
+
+		public User(int id) {
+			this.id = id;
+		}
+
+		public User(int id, String name) {
+			this.id = id;
+			this.name = name;
+		}
+
+		public int getId() {
+			return id;
+		}
+
+		public void setId(int id) {
+			this.id = id;
+		}
+
+		public int getVersion() {
+			return version;
+		}
+
+		public void setVersion(Integer version) {
+			this.version = version;
+		}
+
+		public String getName() {
+			return name;
+		}
+
+		public void setName(String name) {
+			this.name = name;
+		}
+	}
+
 }
